# flows

./: .cspell.json  .eslintignore  .eslintrc.cjs  .eslintrc.js  .gitignore  .prettierrc  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.cjs  tsconfig.eslint.json  tsconfig.json  vite.config.ts
runner/: lib.ts  run.ts  schema.ts  script-template.ts  template.ts
runner/.flows/: type.ts
src/: App.tsx  Dto.ts  ServerPrompt.ts  keyboad.d.ts  main.tsx  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: config.rs  editor.rs  lib.rs  main.rs  parser.rs  runner.rs  utils.rs
src-tauri/src/commands/: create_script.rs  delete_script.rs  edit_flows.rs  edit_script.rs  get_scripts.rs  mod.rs  run.rs  select_script.rs
src/components/: Button.tsx  DeleteConfirm.tsx  Input.tsx  List.tsx  Prompt.tsx  Prompts.tsx  ScriptSelect.tsx  Selected.tsx  Separator.tsx  date-utils.ts  useControlled.ts
src/components/DatePicker/: Calendar.tsx  DateGrid.tsx  DateItem.tsx  DatePicker.tsx  Days.tsx  MonthItem.tsx  Weekdays.tsx  date-utils.ts
src/hooks/: index.ts  useControlled.ts  useElementSize.ts  useFilter.ts  useForkRef.ts
