[package]
authors = ["frontendmonster"]
description = "A Tauri App"
edition = "2021"
license = "MIT"
name = "flows"
repository = "https://github.com/ASafaeirad/flows"
version = "1.0.0"

[build-dependencies]
tauri-build = {version = "1.2", features = [] }

[dependencies]
anyhow = "1.0.69"
colored = {version = "2.0.0", default-features = false}
edit = {version = "0.1.4", default-features = false}
serde = {version = "1.0", features = ["derive"] }
serde_json = {version = "1.0.93"}
swc_common = {version = "0.29.33", default-features = false, features = ["tty-emitter"] }
swc_ecma_ast = {version = "0.98.0", default-features = false, features = [] }
swc_ecma_parser = {version = "0.128.0", default-features = false, features = ["typescript"] }
tauri = {version = "1.2", features = ["global-shortcut-all", "window-all"] }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
